# lang-token-bench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: README.md
configs/: benchmark_suites.yaml  languages.yaml  models.yaml
datasets/: sample_texts.yaml
src/lang_token_bench/: __init__.py  benchmark.py  cli.py  config.py  env.py  openrouter_credits.py  openrouter_models.py  plotting.py  pricing.py  run_tracking.py  schema.py  summary.py
src/lang_token_bench/counters/: __init__.py  anthropic_api.py  base.py  gemini_api.py  hf_tokenizer.py  openai_tiktoken.py  openrouter_usage.py  playwright_web.py  simple_counter.py
src/lang_token_bench/reporters/: __init__.py  csv_reporter.py  markdown_reporter.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_env.py  test_openrouter_credits.py  test_openrouter_models.py  test_openrouter_usage.py  test_plotting.py  test_simple_counter.py  test_summary.py
